# province-count-calculator

./: README.md
province-count-calculator/: CMakeLists.txt  README.md
province-count-calculator/include/: ProvinceCounter.h
province-count-calculator/src/: ProvinceCounter.cpp
province-count-calculator/test/: test_province_counter.cpp
